@@ -14,6 +14,7 @@ VDR 1.7.29
 	Update dutch tv/radio channels on 19E
 	More info for SearchTimer
 	audio/subs type only from "Onload" function for now. (Need the space in the settings menu)
+	Change (preset) server from settings menu.
 
 
 0.21	Language in sepate file, link your lang_XXX.js to language.js to activate it.
